# Diogenes

./: .gitignore  .gitmodules  README.md
Diogenes/src/: AppIcon.icns  CMakeLists.txt  Info.plist  awsutils.cpp  awsutils.hpp  credentialsdialog.cpp  credentialsdialog.h  credentialsdialog.ui  errordialog.cpp  errordialog.hpp  errordialog.ui  launchdialog.cpp  launchdialog.h  launchdialog.ui  loadingscreendialog.cpp  loadingscreendialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectregiondialog.cpp  selectregiondialog.h  selectregiondialog.ui
scripts/: ec2_amzn2_ami_setup.sh  ec2_dl_ami_setup.sh
src/: CMakeLists.txt  awsutils.cpp  awsutils.hpp  ec2_amzn2_ami_setup.sh  ec2_dl_ami_setup.sh  ec2_setup.sh  errordialog.ui  launchdialog.cpp  launchdialog.h  launchdialog.ui  loadingscreendialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectregiondialog.ui
